2009-01-22  Alejandro G. Castro  <alex@igalia.com>

	* src/hildon-pannable-area.c,
	(hildon_pannable_area_class_init): Reduced the amount of scrolls
	per second to 15, we will check if this is ok regarding
	smoothness.

2009-01-22  Alejandro G. Castro  <alex@igalia.com>

	* src/hildon-pannable-area.c,
	(hildon_pannable_axis_scroll): Avoid resize if we already have
	reached overshoot_max.

2009-01-22  Alejandro G. Castro  <alex@igalia.com>

	* src/hildon-pannable-area.c,
	(hildon_pannable_area_init),
	(hildon_pannable_area_realize),
	(hildon_pannable_area_size_allocate),
	(hildon_pannable_area_map),
	(hildon_pannable_area_unmap),
	(hildon_pannable_draw_vscroll),
	(hildon_pannable_draw_hscroll),
	(hildon_pannable_area_expose_event),
	(hildon_pannable_area_refresh): Added a new GdkWindow to the
	pannable are to avoid the expose events go to the window and
	redraw the window. We save this way that part of the stack and the
	paint_boxes. We had to change the positions of the elements when
	drawing.

2009-01-21  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-calendar-popup.c: (hildon_calendar_popup_init):
	* src/hildon-color-chooser-dialog.c:
	(hildon_color_chooser_dialog_init):
	* src/hildon-font-selection-dialog.c:
	(hildon_font_selection_dialog_init),
	(hildon_font_selection_dialog_show_preview):
	* src/hildon-get-password-dialog.c:
	* src/hildon-login-dialog.c:
	* src/hildon-set-password-dialog.c:
	* src/hildon-sort-dialog.c: (hildon_sort_dialog_init):
	* src/hildon-time-picker.c: (hildon_time_picker_init):

	Remove obsolete logical string IDs and update to the appropriate ones.

	Fixes: NB#98609 (Use wdgt_ strings for all hildon dialog buttons)

2009-01-21  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-window.c (hildon_window_update_topmost): Fix warning
	that happens if the window hasn't been realized yet.

	Fixes: NB#95395 (prestarted applications show GLIB WARNING ** Gdk
	- gdkdrawable-x11.c:878 drawable is not a pixmap or window)
